Change running method, add prometheus and grafna Change DB to MSSQL with migrations
